--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,8 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: sqlite3
+  #adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
@@ -23,3 +24,4 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+  url: <%= ENV['DATABASE_URL'] %>
